# caqtus

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  changelog.md  edit_experiment_config.ipynb  edit_sequence_config.ipynb  license.md  pyproject.toml
analyza/: notebook.bat  pyproject.toml
analyza/analyza/: __init__.py  bimodal_distribution.py  bimodal_distribution_with_losses.py  import_sequence.py  maximum_likelihood.py  sequence_dataframe.py
analyza/analyza.daily/: notebook.bat  pyproject.toml
analyza/analyza.fit/: pyproject.toml
analyza/analyza.functions/: pyproject.toml
analyza/analyza.loading/analyza.loading.dataframe_builder/: pyproject.toml
analyza/analyza.loading/analyza.loading.importers/: pyproject.toml
analyza/analyza.maximum_likelihood/: pyproject.toml
analyza/analyza/fit/: __init__.py  fit.py  fit_functions.py
analyza/analyza/import_data/: __init__.py  import_sequence.py  importers.py  sequence_finder.py
analyza/analyza/optimization_scripts/: optimize_mot.py  optimize_tweezer_imaging.py
analyza/analyza/sequence_watcher/: __init__.py  sequence_watcher.py
analyza/analyza_obsolete/import_data/: __init__.py
analyza/analyza_obsolete/optimization_scripts/: optimize_mot.py  optimize_tweezer_imaging.py
analyza/tests/: test_analyza.py
caqtus/: __about__.py  __init__.py  formatter.py  pyproject.toml
caqtus.analysis/: pyproject.toml
caqtus.experiment_control/: pyproject.toml
caqtus.experiment_control/caqtus/experiment_control/: async_utils.py
caqtus.gui/caqtus.gui.common/: pyproject.toml
caqtus.gui/caqtus.gui.condetrol/: pyproject.toml
caqtus.gui/caqtus.gui.condetrol/tests/: launch_condetrol.py
caqtus.gui/caqtus.gui.graphplot/: pyproject.toml
caqtus.shot_compilation/: pyproject.toml
caqtus.shot_compilation/caqtus/shot_compilation/: default_compiler.py  unit_namespace.py  variable_namespace.py
caqtus.shot_compilation/tests/: test_digital_lane_compilation.py
caqtus.types/: pyproject.toml
caqtus.types/caqtus/types/: variable_name.py
caqtus.types/tests/: test_degree.py
caqtus.utils/: pyproject.toml
caqtus/analysis/: __init__.py
caqtus/analysis/loading/: __init__.py  _load_image_count.py  _load_parameters.py  _load_shot_id.py  _sequence_cache.py  _shot_data.py  combinable_importers.py  load_parameters.py  load_shot_id.py  load_shot_info.py  shot_data.py
caqtus/analysis/stats/: __init__.py  stats.py
caqtus/analysis/units/: __init__.py  units.py
caqtus/caqtus.analysis/tests/: test_0.py
caqtus/caqtus.device_library/caqtus.device_library.imaging_source/: pyproject.toml
caqtus/caqtus.device_library/caqtus.device_library.ni6738_analog_card/: pyproject.toml
caqtus/caqtus/session/: path_hierarchy.py
caqtus/device/: __init__.py  _controller.py  configuration.py  name.py
caqtus/experiment_control/: __init__.py  _async_utils.py  _error.py  _experiment_manager.py  _initialize_devices.py  _instruments.py  _kernel.py  _logger.py  _procedures.py  _shot_compiler.py  _shot_event_dispatcher.py  _shot_runner.py  initialize_resources.py  shot_runner.py  shot_timing.py
caqtus/extension/: __init__.py  _experiment.py  _injector.py
caqtus/gui/: __init__.py
caqtus/instructions/: __init__.py  _concatenated.py  _empty.py  _indexing.py  _pattern.py  _ramp.py  _repeated.py  _typing.py
caqtus/session/: __init__.py  _copy.py  _data_id.py  _device_configuration_collection.py  _exception_summary.py  _exceptions.py  _experiment_session.py  _light_result.py  _path.py  _path_hierarchy.py  _result.py  _sequence_collection.py  _session_maker.py  _shot_id.py  _state.py  async_session.py  device_configuration_collection.py  experiment_session.py  parameter_namespace.py  path.py  path_hierarchy.py  sequence_collection.py  session_maker.py
caqtus/shot_compilation/: __init__.py  _compile_digital_lane.py  _device_compiler.py  _shot_time.py  compilation_contexts.py  compile_analog_lane.py  default_compiler.py  evaluate_expression.py  sequencer_paramer_compiler.py  shot_compiler.py  timing.py
caqtus/shot_event_dispatcher/: __init__.py  _shot_event_dispatcher.py
caqtus/types/: __init__.py  _array.py  _parameter_namespace.py  exceptions.py  recoverable_exceptions.py  variable_name.py
caqtus/utils/: __init__.py  _exceptions.py  _result.py  _tblib.py  _trio_instrumentation.py  contextlib.py  result.py
common/concurrent_updater/: pyproject.toml
common/configuration_holder/: pyproject.toml
common/device_config/: pyproject.toml
common/duration_timer/: pyproject.toml
common/experiment_config/: pyproject.toml
common/experiment_manager/: pyproject.toml
common/expression/: pyproject.toml
common/lane/: pyproject.toml
condetrol/: pyproject.toml  qtquickcontrols2.conf
condetrol/condetrol/: __main__.py  config_editor_ui.py  launch_experiment_server.py  resources_rc.py
condetrol/tests/: test_condetrol.py
doc/: README.md  make.bat  pyproject.toml
doc/source/: conf.py  index.rst
experiment_config/: pyproject.toml
experiment_config/experiment_config/: __init__.py  experiment_config.py
experiment_config/tests/: test_experiment_config.py
experiment_manager/: pyproject.toml
experiment_manager/experiment_manager/: __init__.py  compute_shot_parameters.py  experiment_manager_class.py  experiment_manager_server.py  initialize_devices.py  run_optimization.py  sequence_context.py  sequence_runner.py  shot_saver.py  variable_change.py
experiment_manager/tests/: test_compute_shot_parameters.py  test_experiment_manager.py  test_shot_evaluation.py
expression/: pyproject.toml
expression/expression/: expression.py
expression/tests/: test_expression.py
sequence/: pyproject.toml
sequence/sequence/: __init__.py  sequence.py  sequence_config.py  sequence_state.py
sequence/shot/: __init__.py  shot_configuration.py  shot_evaluation.py
sequence/tests/: test_sequence.py
util/: pyproject.toml
util/tests/: test_run_on_change_only.py  test_serialization_customization.py
util/util/: __init__.py  _add_exc_note.py  _log_duration.py  duration_timer.py  inspect_subclasses.py  run_on_change_only.py
(+2451 files in other folders)
