[tool.poetry]
name = "caqtus"
version = "0.4.5"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"

# Core dependencies
numpy = "^1.26.4"
scipy = "^1.12.0"
sympy = "^1.12"
polars = "^0.20.16"
pydantic = "^2.6.4"
tblib = "^3.0.0"
anyio = {extras = ["trio"], version = "^4.3.0"}
returns = "^0.22.0"
python-benedict = "^0.33.2"
pint = "^0.23"
token-utils = "^0.1.8"
attrs = "^23.2.0"
cattrs = "^23.2.3"
pyyaml = "^6.0.1"

# SQL dependencies
sqlalchemy = {version = "^2.0.28", optional = true}
sqlalchemy-utils =  {version = "^0.41.1", optional = true}

# GUI dependencies
pyside6 = {version = "^6.6.2", optional = true}
anytree = {version = "^2.12.1", optional = true}
qtawesome = {version = "^1.3.0", optional = true}
pyqtgraph = {version = "^0.13.4", optional = true}


[tool.poetry.extras]
gui = ["pyside6", "anytree", "qtawesome", "pyqtgraph"]
sql = ["sqlalchemy", "sqlalchemy-utils"]


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
hypothesis = "^6.99.12"
pytest-qt = "^4.4.0"


[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pyright = "^1.1.355"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
