[tool.poetry]
name = "caqtus"
version = "4.8.7"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"

# Core dependencies
numpy = "^1.26.4"
scipy = "^1.12.0"
sympy = "^1.12"
polars = "^0.20.16"
pydantic = "^2.6.4"
tblib = "^3.0.0"
anyio = {extras = ["trio"], version = "^4.3.0"}
returns = "^0.22.0"
python-benedict = "^0.33.2"
pint = "^0.23"
token-utils = "^0.1.8"
attrs = "^23.2.0"
cattrs = "^23.2.3"
pyyaml = "^6.0.1"
typing-extensions = "^4.10.0"
eliot = "^1.15.0"

# SQL dependencies
sqlalchemy = {version = "^2.0.28"}
sqlalchemy-utils =  {version = "^0.41.1"}
aiosqlite = ">=0.20.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}

# GUI dependencies
pyside6 = {version = ">=6.6"}
qtawesome = {version = "^1.3.0"}
pyqtgraph = {version = "^0.13.4"}
matplotlib = "^3.8.3"
nodegraphqt = {git = "https://github.com/light-scattering-io/NodeGraphQt.git"}


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-qt = "^4.4.0"
hypothesis = {extras = ["numpy"], version = "^6.103.1"}

[tool.poetry.group.doc.dependencies]
sphinx = "^7.2.6"
sphinxcontrib-plantuml = "^0.29"
sphinx-autoapi = "^3.0.0"
requests = "^2.31.0"
sphobjinv = "^2.3.1"
sphinx-autodoc-typehints = "^2.0.0"
sphinx-rtd-theme = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pyright = "^1.1.355"
coverage = "^7.4.4"
licensecheck = "^2024.1.4"
pre-commit = "^3.7.0"
eliot-tree = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
