[tool.poetry]
name = "analyza"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique>"]

[tool.poetry.dependencies]
python = "^3.10"
sequence = { path = "../common/sequence/", develop = true }
matplotlib = "^3.6.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
