[tool.poetry]
name = "analyza"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique>"]

[tool.poetry.dependencies]
python = "^3.11, <3.12"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
pandas = "^1.5.1"
tqdm = "^4.64.1"
pint-pandas = "^0.2"
seaborn = "^0.12.1"
scipy = "^1.9.3"
numdifftools = "^0.9.41"
qutip = "^4.7.0"
sympy = "^1.11.1"
sequence-runtime = {path = "../common/sequence/sequence.runtime", develop = true}
experiment-session = {path = "../common/experiment/experiment.session", develop = true}
visual-sequence-watcher = {path = "../visual/visual.sequence_watcher", develop = true}
jupyterlab = "^3.6.2"
ipympl = "^0.9.3"
analyze-spots = {path = "../devices/tweezers/analyze_spots", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
