[tool.poetry]
name = "caqtus-analysis"
version = "1.0.0"
description = ""
authors = ["damien <damien.bloch@institutoptique.fr>"]
readme = "README.md"
packages = [{include = "caqtus"}]

[tool.poetry.dependencies]
python = "^3.11"

polars = "^0.20.16"
numpy = "^1.26.4"
scipy = "^1.12.0"

caqtus-session = {path = "../caqtus.session"}
caqtus-types = {path = "../caqtus.types"}


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
