[tool.poetry]
name = "caqtus-experiment-control"
version = "1.0.1"
description = ""
authors = ["damien <damien.bloch@institutoptique.fr>"]
readme = "README.md"
packages = [{include = "caqtus"}]

[tool.poetry.dependencies]
python = "^3.11"

numpy = "^1.26.4"
tblib = "^3.0.0"

anyio = {extras = ["trio"], version = "^4.3.0"}
caqtus-device = {path = "../caqtus.device"}
caqtus-session = {path = "../caqtus.session"}
caqtus-shot-compilation = {path = "../caqtus.shot_compilation"}
caqtus-types = {path = "../caqtus.types"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
