[tool.poetry]
name = "caqtus-types"
version = "1.0.2"
description = ""
authors = ["damien <damien.bloch@institutoptique.fr>"]
readme = "README.md"
packages = [{include = "caqtus"}]

[tool.poetry.dependencies]
python = "^3.11"

pint = "^0.23"
numpy = "^1.26.4"
token-utils = "^0.1.8"

caqtus-utils = {path = "../caqtus.utils"}

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
