[tool.poetry]
name = "caqtus"
version = "1.0.14"
description = ""
authors = ["damien <damien.bloch@institutoptique.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"

caqtus-utils = {path = "caqtus.utils", develop = true}
caqtus-types = {path = "caqtus.types/", develop = true}
caqtus-device = {path = "caqtus.device/", develop = true}
caqtus-session = {path = "caqtus.session/", develop = true}
caqtus-analysis = {path = "caqtus.analysis/", develop = true}
caqtus-shot-compilation = {path = "caqtus.shot_compilation/", develop = true}
caqtus-experiment-control = {path = "caqtus.experiment_control/", develop = true}

caqtus-gui-condetrol = {path = "caqtus.gui/caqtus.gui.condetrol/", develop = true}
caqtus-gui-graphplot = {path = "caqtus.gui/caqtus.gui.graphplot/", develop = true}
caqtus-gui-shotviewer = {path = "caqtus.gui/caqtus.gui.shotviewer/", develop = true}

caqtus-device-library-swabian-pulse-streamer = {path = "caqtus.device_library/caqtus.device_library.swabian_pulse_streamer", optional = true, develop = true}
caqtus-device-library-spincore-pulse-blaster = {path = "caqtus.device_library/caqtus.device_library.spincore_pulse_blaster", optional = true, develop = true}
caqtus-device-library-imaging-source = {path = "caqtus.device_library/caqtus.device_library.imaging_source", optional = true, develop = true}

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pyright = "^1.1.355"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
