[tool.poetry]
name = "caqtus"
version = "0.1.0"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

numpy = "^1.26.4"
scipy = "^1.12.0"
sympy = "^1.12"
polars = "^0.20.16"
pydantic = "^2.6.4"
tblib = "^3.0.0"
anyio = {extras = ["trio"], version = "^4.3.0"}
sqlalchemy = "^2.0.28"
sqlalchemy-utils = "^0.41.1"
returns = "^0.22.0"
python-benedict = "^0.33.2"
pint = "^0.23"
token-utils = "^0.1.8"
attrs = "^23.2.0"
cattrs = "^23.2.3"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
