[tool.poetry]
name = "condetrol"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
Send2Trash = "^1.8.0"
pyqt6 = "^6.4.1"
QDarkStyle = "^3.1"
appdirs = "^1.4.4"
settings_model = { path = "../common/settings_model/", develop = true }
experiment-configuration = {path = "../common/experiment/experiment.configuration", develop = true}
experiment_manager = { path = "../experiment_manager/", develop = true }
sequence-configuration = {path = "../common/sequence/sequence.configuration", develop = true}
sqlalchemy = ">=2.0"
anytree = "^2.8.0"
sequence-runtime = {path = "../common/sequence/sequence.runtime", develop = true}
pyqt6-charts = "^6.4.0"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
jupyter = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
