[tool.poetry]
name = "condetrol"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique.fr>"]

[tool.poetry.dependencies]
python = "^3.11, <3.12"

pyqt6 = "^6.4.1"
pyqt6-charts = "^6.5.0"
QDarkStyle = "^3.1"
sqlalchemy = ">=2.0"
anytree = "^2.8.0"

settings_model = { path = "../common/settings_model/", develop = true }
experiment-configuration = {path = "../common/experiment/experiment.configuration", develop = true}
sequence-configuration = {path = "../common/sequence/sequence.configuration", develop = true}
sequence-runtime = {path = "../common/sequence/sequence.runtime", develop = true}
qabc = {path = "../common/widgets/qabc", develop = true}
yaml-clipboard-mixin = {path = "../common/widgets/yaml_clipboard_mixin", develop = true}
concurrent-updater = {path = "../common/concurrent_updater", develop = true}
remote-server-combobox = {path = "../common/widgets/remote_server_combobox", develop = true}
serial-port-widget = {path = "../common/widgets/serial_port_widget", develop = true}
expression-widget = {path = "../common/widgets/expression_widget", develop = true}
variable-range-widget = {path = "../common/widgets/variable_range_widget", develop = true}
experiment-control-manager = {path = "../experiment_control/experiment_control.manager", develop = true}
device-config = {path = "../devices/device/device.configuration", develop = true}


[tool.poetry.dev-dependencies]
black = "^22.6.0"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
mypy = "^1.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
