[tool.poetry]
name = "experiment_config"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <bloc.dam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
settings_model = { path = "../settings_model/", develop = true }
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
