[tool.poetry]
name = "experiment_manager"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <bloc.dam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
units = { path = "../units/", develop = true }
spincore_sequencer = { path = "../devices/spincore_sequencer", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
