[tool.poetry]
name = "expression"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <bloc.dam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
token-utils = "^0.1.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
settings_model = { path = "../settings_model/", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
