[tool.poetry]
name = "util"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

attrs = "^23.1.0"
cattrs = "^23.1.2"
pyyaml = "^6.0.1"
numpy = "^1.26.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
black = "^23.10.1"
sphinx = "^7.2.6"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
