[tool.poetry]
name = "analyza-fit"
version = "0.1.0"
description = ""
authors = ["Damien <damien.bloch@institutoptique.fr>"]
readme = "README.md"
packages = [{include = "analyza"}]

[tool.poetry.dependencies]
python = "^3.10, <3.13"

numpy = "^1.24.3"
pandas = "^2.0.2"
scipy = "^1.10.1"
util = {path = "../../util", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
