[tool.poetry]
name = "analyza-functions"
version = "0.1.0"
description = ""
authors = ["damien <damien.bloch@institutoptique.fr>"]
readme = "README.md"
packages = [{include = "analyza"}]

[tool.poetry.dependencies]
python = "^3.11, <3.13"

scipy = "^1.10.1"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
