[tool.poetry]
name = "analyza-maximum-likelihood"
version = "0.1.0"
description = ""
authors = ["damien <damien.bloch@institutoptique.fr>"]
readme = "README.md"
packages = [{include = "analyza"}]

[tool.poetry.dependencies]
python = "^3.8, <3.12"

numpy = "^1.24.3"
scipy = "^1.10.1"
inspect-function = {path = "../../common/inspect_function", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
