[tool.poetry]
name = "caqtus-gui-condetrol"
version = "1.0.2"
description = ""
authors = ["damien <damien.bloch@institutoptique.fr>"]
readme = "README.md"
packages = [{include = "caqtus"}]

[tool.poetry.dependencies]
python = "^3.11, <3.13"

pyside6 = "^6.6.2"
qtawesome = "^1.3.0"

caqtus-session = {path = "../../caqtus.session"}
caqtus-device = {path = "../../caqtus.device"}
caqtus-types = {path = "../../caqtus.types"}
caqtus-experiment-control = {path = "../../caqtus.experiment_control"}
caqtus-gui-common = {path = "../caqtus.gui.common"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
