[tool.poetry]
name = "caqtus-gui-graphplot"
version = "1.0.0"
description = ""
authors = ["damien <damien.bloch@institutoptique.fr>"]
readme = "README.md"
packages = [{include = "caqtus"}]

[tool.poetry.dependencies]
python = "^3.11, <3.13"

pyside6 = "^6.6.2"
qtawesome = "^1.3.0"
pyqtgraph = "^0.13.4"

caqtus-gui-common = {path = "../caqtus.gui.common"}
caqtus-session = {path = "../../caqtus.session"}
caqtus-analysis = {path = "../../caqtus.analysis"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
