[tool.poetry]
name = "concurrent-updater"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique>"]
readme = "README.md"
packages = [{include = "concurrent_updater"}]

[tool.poetry.dependencies]
python = "^3.11,<3.13"
core-session = {path = "../../core/core.session", develop = true}
util = {path = "../../util", develop = true}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
