[tool.poetry]
name = "configuration-holder"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique>"]
readme = "README.md"
packages = [{include = "configuration_holder"}]

[tool.poetry.dependencies]
python = "^3.11"
settings-model = {path = "../settings_model", develop = true}
validate-arguments = {path = "../validate_arguments", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
