[tool.poetry]
name = "device-config"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <bloc.dam@gmail.com>"]
readme = "README.md"
packages = [{include = "device_config"}]

[tool.poetry.dependencies]
python = "^3.7"
settings-model = {path = "../settings_model", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
