[tool.poetry]
name = "duration-timer"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique>"]
readme = "README.md"
packages = [{include = "duration_timer"}]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
