[tool.poetry]
name = "experiment_config"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <bloc.dam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
settings_model = { path = "../settings_model/", develop = true }
sequence = { path = "../sequence/", develop = true }
device_config = { path = "../device_config/", develop = true }
camera = { path = "../../devices/cameras/camera", develop = true }
orca_quest = { path = "../../devices/cameras/orca_quest", develop = true }
appdirs = "^1.4.4"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
