[tool.poetry]
name = "experiment_config"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <bloc.dam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
settings_model = { path = "../settings_model/", develop = true }
sequence = { path = "../sequence/", develop = true }
device_config = { path = "../device_config/", develop = true }
appdirs = "^1.4.4"
PyQt5 = "^5.15.7"
picomotor-configuration = {path = "../../devices/picomotor/picomotor.configuration", develop = true}
camera-configuration = {path = "../../devices/cameras/camera/camera.configuration", develop = true}
orca-quest-configuration = {path = "../../devices/cameras/orca_quest/orca_quest.configuration", develop = true}
ni6738-analog-card-configuration = {path = "../../devices/ni6738_analog_card/ni6738_analog_card.configuration", develop = true}
spincore-sequencer-configuration = {path = "../../devices/spincore_sequencer/spincore_sequencer.configuration", develop = true}
siglent-sdg6000x-configuration = {path = "../../devices/siglent_sdg6000X/siglent_sdg6000x.configuration", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
