[tool.poetry]
name = "expression"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <bloc.dam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
token-utils = "^0.1.8"
numpy = "^1.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
settings_model = { path = "../settings_model/", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
