[tool.poetry]
name = "expression"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <bloc.dam@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.13"

token-utils = "^0.1.8"
numpy = "^1.24.0"
scipy = "^1.10.1"

variable-name = {path = "../variable/variable.name", develop = true}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
settings_model = { path = "../settings_model/", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
types-pyyaml = "^6.0.12.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
