[tool.poetry]
name = "lane"
version = "0.1.0"
description = ""
authors = ["Damien Bloch <damien.bloch@institutoptique>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.12"
pyyaml = "^6.0.1"
pydantic = "^1.0"
settings-model = {path = "../settings_model", develop = true}
expression = {path = "../expression", develop = true}
units = {path = "../units", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
